# CS2-Bot-Improver-Plus

./: .gitattributes  .gitignore  CONTRIBUTING.md  Commands.txt  README.md  README.zh-CN.md
.github/workflows/: release.yml
Panel/: index.html  package-lock.json  package.json
Panel/src/: App.css  App.tsx  devFixture.ts  main.tsx
Panel/src-tauri/: Cargo.toml  tauri.conf.json
Panel/src-tauri/capabilities/: default.json
Panel/src-tauri/core-tests/: Cargo.toml
Panel/src-tauri/core-tests/src/: lib.rs
Panel/src-tauri/src/: app_storage.rs  app_version.rs  atomic_fs.rs  diagnostics.rs  install_checks.rs  installer.rs  lib.rs  logging.rs  main.rs  match_system.rs  mode_files.rs  mode_layout.rs  online_update.rs  runtime_state.rs  steam.rs  update_core.rs
Panel/src/components/: Collapsible.css  CosmeticsPresetActions.css  CosmeticsPresetActions.tsx  CosmeticsTeamSwitch.css  CosmeticsTeamSwitch.tsx  Dropdown.css  Dropdown.tsx  ErrorModal.css  ErrorModal.tsx  Modal.css  Modal.tsx  Section.css  Segmented.css  Segmented.tsx  StatusBar.css  StatusBar.tsx  StatusDot.css  StatusDot.tsx  SubPage.css  SubPage.tsx  TitleBar.css  TitleBar.tsx  Toast.css  Toggle.css  WearGauge.css  WearGauge.tsx
Panel/src/data/: commands.ts  commands.txt  devs.ts  languages.ts  maps.ts  matchVisuals.ts  skinLocalization.ts  stickerCatalog.source.json  stickerWeaponIds.json  stickers.ts  weaponIcons.ts
Panel/src/i18n/: dictionary.ts  index.ts  keys.ts
Panel/src/lib/: api.ts  browserMock.ts  installCheckLocalization.ts  platform.ts  runtime.ts  stickerEditor.ts  useSelectedPickerScroll.ts  version.ts
Panel/src/panels/: BotItemsPanel.css  BotItemsPanel.tsx  CommandsPanel.css  CommandsPanel.tsx  DifficultyCard.tsx  DropKnivesSection.css  DropKnivesSection.tsx  GlovePresetModal.tsx  GuideView.css  GuideView.tsx  KnifePresetModal.css  KnifePresetModal.tsx  MatchHistoryPanel.tsx  MatchPanel.css  MatchPanel.tsx  MatchResultView.tsx  ModeCard.css  ModeCard.tsx  MusicKitPresetModal.tsx  OverviewDashboard.tsx  PlusGuideArticle.css  PlusGuideArticle.tsx  PresetsPanel.css  PresetsPanel.tsx  (+7 more)
addons/BotHider/: bot_info.json  gamedata.json
addons/metamod/: BotHider.vdf
cfg/: gamemode_competitive.cfg  my_bot_ffa_config.cfg  my_bot_normal_config.cfg
docs/: PLAYER-COSMETICS.md  UPSTREAM.md
overrides/High/: botprofile.db
overrides/Low/: botprofile.db
overrides/Medium/: botprofile.db
scripts/: VpkTools.ps1  build.ps1  dependencies.json  generate-sticker-catalog.mjs  package.ps1  sign-update.py  test-sticker-editor.mjs  update-public-key.txt  verify-update-assets.py  verify-workspace.ps1
(+77 files in other folders)
