[package]
name = "cs2bi-core-tests"
version = "1.4.2+5"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = "2"
sysinfo = "0.33"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
